# sboxU

./: .gitgnore  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  __init__.py  default.nix  diff_lin.py  display.py  example.py  flake.nix  lat_test.sage  pyproject.toml  sbox_db.py  sboxu_cpp.hpp  sboxu_cpp_diff_lin.hpp  sboxu_cpp_utils.cpp  sboxu_cpp_utils.hpp  setup.py  switching.py
docs/: README.md  biblio.py  gen.sh
docs/cpp/: doxygen.conf  gen-doc.sh
docs/source/: apn-study.rst  conf.py  index.rst  modules.rst
sboxU/: CMakeLists.txt  README  README.org  __init__.py  analysis.py  ccz.py  config.py  cycles.py  diff_lin.py  display.py  ea_equivalence_quadratic.py  fp_extension.py  linear.py  linear_automorphisms.py  quadratic.py  sboxu_cpp.cpp  sboxu_cpp.hpp  sboxu_cpp_ccz.cpp  sboxu_cpp_ccz.hpp  sboxu_cpp_diff_lin.cpp  sboxu_cpp_diff_lin.hpp  sboxu_cpp_equiv.cpp  sboxu_cpp_equiv.hpp  sboxu_cpp_utils.cpp  sboxu_cpp_utils.hpp  tu_decomposition.py  utils.py
sboxU/algorithms/: __init__.pxd  __init__.py  cython_functions.pxd  cython_functions.pyx
sboxU/apn/: __init__.pxd  __init__.py  cython_functions.pxd  cython_functions.pyx  database.py
sboxU/biblio/: __init__.py  biblio.bib  references.py
sboxU/ccz/: __init__.pxd  __init__.py  cython_functions.pxd  cython_functions.pyx  equivalence_from_vq.py  equivalences_from_code.py  self_equivalences.py  tu_decompositions.py
sboxU/core/: __init__.pxd  __init__.py
sboxU/cpp/: CMakeLists.txt  README.md
sboxU/databases/: __init__.py  database.py  literatureDB.py
sboxU/display/: __init__.py  output.py  pollock.py
sboxU/known_functions/: __init__.py  eightBitAPN.py  sevenBitAPN.py  sixBitAPN.py  tenBitAPN.py
sboxU/random_objects/: __init__.py  random_objects.py
sboxU/sboxU_cython/: __init__.py  ccz.pyx  cpp_ccz.cpp  cpp_ccz.pyx  cpp_diff_lin.cpp  cpp_diff_lin.pyx  cpp_diff_lin_no_fp_lat.pyx  cpp_equiv.cpp  cpp_equiv.pyx  cpp_equiv_approx.cpp  cpp_equiv_approx.pyx  cpp_fp.cpp  cpp_fp.pyx  cpp_partition_preserving_linear_mapping.pyx  cpp_utils.cpp  cpp_utils.pyx  fp.pyx  sboxu_cpp.hpp  sboxu_cpp.pxd  sboxu_cpp_ccz.cpp  sboxu_cpp_ccz.hpp  sboxu_cpp_diff_lin.cpp  sboxu_cpp_diff_lin.hpp  sboxu_cpp_equiv.cpp  sboxu_cpp_equiv.hpp  sboxu_cpp_equiv_approx.cpp  sboxu_cpp_equiv_approx.hpp  sboxu_cpp_fp.cpp  sboxu_cpp_fp.hpp  sboxu_cpp_fp_lat.cpp  sboxu_cpp_fp_lat.hpp  sboxu_cpp_no_fp_lat.pxd  sboxu_cpp_partition_preserving_linear_mapping.cpp  sboxu_cpp_partition_preserving_linear_mapping.hpp  sboxu_cpp_utils.cpp  sboxu_cpp_utils.hpp  setup.py  utils.pyx
sboxU/scripts/: __init__.py
sboxU/statistics/: __init__.pxd  __init__.py  anomalies.py  cython_functions.pxd  cython_functions.pyx
sboxUv2/: README.org  __init__.py  config.py  cython_types.pxd
sboxUv2/algorithms/: __init__.pxd  __init__.py  cython_functions.pxd  cython_functions.pyx  invariants.py
sboxUv2/apn/: __init__.pxd  __init__.py  (+3 more)
sboxUv2/cpp/: CMakeLists.txt  apn.cpp  apn.hpp  common.hpp  f2funcs.cpp  f2functions.cpp  f2functions.hpp  s_box.cpp  s_box.hpp  sbox.hpp  sboxU-cpp-module.hpp  sboxU.hpp
sboxUv2/cpp/algorithms/: bigvectors.hpp  binLinearBasis.cpp  binLinearBasis.hpp  include.hpp  linearBasis.cpp  linearBasis.hpp  linearSystem.cpp  linearSystem.hpp  spaceSearch.cpp  spaceSearch.hpp  sparseVector.hpp
sboxUv2/cpp/apn/: ccz_class.cpp  ccz_class.hpp  include.hpp  invariants.cpp  invariants.hpp  ortho_derivative.cpp  ortho_derivative.hpp  sn.cpp  sn.hpp
sboxUv2/cpp/ccz/: explore.cpp  explore.hpp  graph.cpp  graph.hpp  linear_equivalence.cpp  linear_equivalence.hpp  linear_representative.cpp  linear_representative.hpp  zeroes.cpp  zeroes.hpp
sboxUv2/cpp/ccz/partition_preserving_linear_mapping/: pplm.cpp  pplm.hpp
sboxUv2/cpp/core/: anf.cpp  anf.hpp  binLinearMap.cpp  binLinearMap.hpp  componentsGeneration.hpp  f2affinemap.cpp  f2affinemap.hpp  f2functions.cpp  f2functions.hpp  include.hpp  multithread.hpp  prng.hpp  s_box.cpp  s_box.hpp  s_box_fp.cpp  s_box_fp.hpp  spectrum.cpp  spectrum.hpp
sboxUv2/cpp/doc/: doxygen.conf  gen-doc.sh
sboxUv2/cpp/exploration/: sn.cpp  sn.hpp
sboxUv2/cpp/statistics/: boomerang.cpp  boomerang.hpp  differential.cpp  differential.hpp  include.hpp  linear.cpp  linear.hpp  linear_structures.hpp  quasi_differential.cpp  quasi_differential.hpp  spectrum.cpp  spectrum.hpp
sboxUv2/cpp/tests/: F2Sbox.cpp  prng.cpp  quasi_differential.cpp  test_sn.cpp
scripts/: __init__.py
tests/: F2linearSystem.py  algorithms.py  anf.py  apn.py  biblio.py  building_blocks.py  ccz.py  compact_representation.py  database.py  display.py  ea_equivalence.py  equivalences.py  f2functions.py  linear_automorphisms.py  ortho_integral.py  prng.py  sbox.py  self_equivalences.py  sn.py  statistics.py  test_Sb_multivariate.py  test_vitesse_xddt.py  timer.py
(+189 files in other folders)
