[project]
name = "sboxUv2"
version = "2.0"
description = "SAGE/Python functions useful for studying S-boxes and Boolean functions such as computing the DDT, the Walsh spectrum, investigating their (CCZ/affine/EA equivalence classes..."
dependencies = [ "pybtex", "rich", "sphinx-rtd-theme" ]

[project.scripts]
sboxU_apn_db_generation   = "sboxUv2.scripts.apnDB.generate:main_cli"


[build-system]
requires = [ "setuptools", "wheel", "cython" ]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["sboxUv2.apn", "sboxUv2.apn.knownFunctions", "sboxUv2.algorithms", "sboxUv2.ccz.affine_equivalence", "sboxUv2.ccz", "sboxUv2.core.anf", "sboxUv2.core.sbox", "sboxUv2.core.spectrum", "sboxUv2.core.f2functions", "sboxUv2.core.building_blocks", "sboxUv2.display", "sboxUv2.scripts", "sboxUv2.scripts.apnDB", "sboxUv2.databases", "sboxUv2.biblio"]
