[project]
name = "sboxUv2"
version = "2.0"
description = "SAGE/Python functions useful for studying S-boxes and Boolean functions such as computing the DDT, the Walsh spectrum, investigating their (CCZ/affine/EA equivalence classes..."
dependencies = [ "pybtex", "rich", "sphinx-rtd-theme" ]

[project.scripts]
sboxU_apn_db_generation   = "sboxUv2.scripts.apnDB.generate:main_cli"


[build-system]
requires = [ "setuptools", "wheel", "cython" ]
build-backend = "setuptools.build_meta"


# [tool.setuptools]
# packages = []
