[project]
name = "sboxU"
version = "2.0"
description = "SAGE/Python functions useful for studying S-boxes and Boolean functions such as computing the DDT, the Walsh spectrum, investigating their (CCZ/affine/EA equivalence classes..."
dependencies = [ "pybtex", "rich", "sphinx-rtd-theme" ]

[project.scripts]
sboxU_apn_db_generation   = "sboxU.scripts.apnDB.generate:main_cli"
sboxU_test_tangle   = "sboxU.scripts.tangler.testTangler:main_cli"


[build-system]
requires = ["setuptools", "wheel", "cython>=3.00" ]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["sboxU*"] 
namespaces = false
